# Change Log
[ToLaserBlade (for Better than Adventure!)](https://modrinth.com/mod/tolaserblade/versions?s=true&g=b1.7.3).
[Source](https://github.com/Iunius118/ToLaserBlade-BTA).

## [Unreleased]
### Changed
- Port to BTA 7.3_04.
- Require Better than Adventure! Babric 7.3_04 and HalpLibe 5.2.4.
- Change color of orange laser blade.

## [1.1.0]
### Changed
- Port to BTA 7.1_01.
- Require Better than Adventure! Babric 7.1_01 and HalpLibe 3.5.4.

## [1.0.0-beta.1]
### Added
- 15 different colors to laser blade. The color of the laser blade is determined by the color of the lamp in the crafting material.

### Changed
- Laser blade recipes now require steel ingots and lamp.

### Fixed
- Size of rendered laser blade.
- Rendering of laser blade in preview area in player's inventory.

## [1.0.0-alpha.1]
### Changed
- Require Better than Adventure! Babric 1.7.7.0_02 and HalpLibe 2.7.0+.

### Added
- Laser blade item and recipe.