@@ -7,6 +7,7 @@
 - Port to BTA 7.3_04.
 - Require Better than Adventure! Babric 7.3_04 and HalpLibe 5.2.4.
 - Change color of orange laser blade.
+- Add all color variations of laser blade to creative inventory.
 
 ## [1.1.0]
 ### Changed
